--- a/public/db/credits.html
+++ b/public/db/credits.html
@@ -71,6 +71,61 @@
   <a href="https://www.freepik.com" title="Freepik">Freepik</a> from
   <a href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a>
 </div>
+<div>
+  Icons made by
+  <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26"
+    >Icongeek26</a
+  >
+  from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+</div>
+<div>
+  Icons made by
+  <a href="https://www.freepik.com" title="Freepik">Freepik</a> from
+  <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+</div>
+<div>
+  Icons erstellt von
+  <a href="https://www.freepik.com" title="Freepik">Freepik</a> from
+  <a href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a>
+</div>
+<div>
+  Icons made by
+  <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26"
+    >Icongeek26</a
+  >
+  from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+</div>
+<div>
+  Icons made by
+  <a href="https://www.freepik.com" title="Freepik">Freepik</a> from
+  <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+</div>
+<div>
+  Icons made by
+  <a href="https://www.freepik.com" title="Freepik">Freepik</a> from
+  <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+</div>
+<div>
+  Icons erstellt von
+  <a href="https://www.flaticon.com/de/autoren/monkik" title="monkik">monkik</a>
+  from
+  <a href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a>
+</div>
+<div>
+  Icons made by
+  <a href="https://www.freepik.com" title="Freepik">Freepik</a> from
+  <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+</div>
+<div>
+  Icons made by
+  <a href="https://www.freepik.com" title="Freepik">Freepik</a> from
+  <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+</div>
+<div>
+  Icons erstellt von
+  <a href="https://www.freepik.com" title="Freepik">Freepik</a> from
+  <a href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a>
+</div>
 
 <h1>websites</h1>
 <h5>https://www.allrecipes.com</h5>
